src/styles/App.css
.App {

  padding: 10px;
}

.App .logo {
  height: auto;
  max-width: 180px;
}

form.login-form {
  margin: 0 auto;
}

.ant-btn-primary {
  color: #fff;
  background-color: #722ed1;
  box-shadow: 0 2px 0 rgba(155, 5, 255, 0.06);
}

.loading {
  margin-top: 180px;
}

.welcomeCardGridLeft {
  width: 65% !important;
  text-align: left;
  padding: 0 1em !important;
}

.welcomeCardGridLeft p, .welcomeCardGridLeft h2 {
  margin: 0 !important;
}
.welcomeCardGridLeft h2 {
  margin-top: 0.22em !important;
}

.welcomeCardGridRight {
  width: 35% !important;
  text-align: center;
  padding: 1em !important;
}

.bellIcon {
  font-size: 24px;
  vertical-align: -0.3em !important;
  padding-left: 0.3em;
}

h1.balance {
  text-align: center;
}

.accountSelect {
  width: 100%;
}

.currentMonth {
  border: #4096ff solid 1px;
  border-radius: 5px;
  text-align: center;
  height: 30px;
  line-height: 30px;
  margin: 0 auto;
}

.monthSelector {
  margin-bottom: 20px;
}

.monthlyMovements .ant-col > div {
  background-color: #F6F6F6;
  border-radius: 5px;
  padding: 5px;
}
.monthlyMovements .ant-col.left {
  padding: 5px;
  padding-left: 0;
}
.monthlyMovements .ant-col.right {
  padding: 5px;
  padding-right: 0;
}

.monthlyMovements h4 {
  text-align: center;
  font-size: 1em;
}

.accountSelector {
  margin-top: 20px;
}

